--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
        </li>
        <li class="nav-item">
         <a class="nav-link" href="#">Portfolio</a>
+       </li><li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
+       </li><li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
+       </li><li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
        </li>
    
      </ul>
@@ -41,7 +47,7 @@
    
    <div class="back-1">
     <div class="container">
-        <div class="display text-center d-flex flex-column bd-highlight  "> Web Developement </div>
+        <div class="display text-center d-flex flex-column bd-highlight"> Web Developement </div>
     </div>
      
        </div>
