--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</form>
 
 				<p class="s2-txt3 p-t-18">
-					And don’t worry, we hate spam too! You can unsubcribe at anytime.
+					can unsubcribe at anytime.
 				</p>
 			</div>
 
