--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<span class="focus-input100"></span>
 					</div>
 
-					<div class="w-full">
+				 	<div class="w-full">
 						<button class="flex-c-m s2-txt2 size4 bg1 bor1 hov1 trans-04">
 							Subscribe
 						</button>
@@ -78,7 +78,7 @@
 				</form>
 
 				<p class="s2-txt3 p-t-18">
-					can unsubcribe at anytime.
+					And don’t worry, we hate spam too! You can unsubcribe at anytime.
 				</p>
 			</div>
 
